apps/cookbook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: mealie
    app.kubernetes.io/part-of: mealie
    app.kubernetes.io/version: 0.4.3
  name: mealie
  namespace: cookbook
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: mealie
    app.kubernetes.io/part-of: mealie
