apps/cookbook/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 600K
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: mealie
    app.kubernetes.io/part-of: mealie
    app.kubernetes.io/version: 0.5.1
    probe: enabled
  name: mealie
  namespace: cookbook
spec:
  rules:
  - host: cookbook.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: mealie
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cookbook.ankhmorpork.thaum.xyz
    secretName: mealie-tls
